# iris-inference

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
api/: Dockerfile  app.py
ml/: register_model.py  train.py
